# xscan

./: CMakeLists.txt  LICENSE.txt  MANUAL_INSTALLATION.md  README.md  SETUP_GUIDE.md  TROUBLESHOOT.md  USAGE_GUIDE.md  banner.cpp  banner.h  incase.cpp  install.sh  kali_scanner.cpp  kali_setup.sh  main.cpp  scanner.cpp  scanner.h  termux_scanner.cpp  termux_setup.sh  uninstall.sh  utils.cpp  utils.h  windows_scanner.cpp  windows_setup.ps1
docs/: MANUAL_INSTALLATION.md  SETUP_GUIDE.md  TROUBLESHOOT.md  USAGE_GUIDE.md
scripts/: install.sh  kali_setup.sh  termux_setup.sh  uninstall.sh  windows_setup.ps1
src/: banner.cpp  banner.h  kali_scanner.cpp  main.cpp  scanner.cpp  scanner.h  utils.cpp  utils.h  windows_scanner.cpp
src/src/: termux_scanner.cpp
